# PatchClampSimulator

./: CMakeLists.txt  README.md  main.cpp  main.h  remove_breaklines.py
inc/: CircularBuffer.h  FloatBytes.h  functions.h  second_core.h
src/: CMakeLists.txt  CircularBuffer.cpp  functions.cpp  second_core.cpp
